mdapipkg/objects/KGAdditionalSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Captures Kinetic Growth&apos;s Venue(Shopping Cart) settings</description>
    <fields>
        <fullName>Cart_Activation_Batch_Size__c</fullName>
        <label>Cart Activation Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Days_Before_Effective_Date_Run_Batch__c</fullName>
        <description>This number is the number of days before an Opportunity&apos;s Contract Effective Date to run the batch job which processes carts.</description>
        <label>N Days Before Effective Date Run Batch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preactivation_Cart_Stage__c</fullName>
        <label>Preactivation Cart Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>KG Additional Settings</label>
</CustomObject>